feat(worker): adding job data to context
* placeholders `{{jobKey}}` and `{{workflowInstanceKey}}` are replaced by the job data